cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_159.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/s3_cbc.c:51: error: DEAD_STORE
  The value written to &md_out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/s3_cbc.c:51:5: Write of unused value
49.       u32toLE(md5->B, md_out);
50.       u32toLE(md5->C, md_out);
51.       u32toLE(md5->D, md_out);
          ^
52.   }
53.   
